--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -33,6 +33,9 @@
             <NavLink class="nav-link" href="Reports">
                 📊 Relatórios
             </NavLink>
+            <NavLink class="nav-link" href="Login">
+                🔐 Entrar
+            </NavLink>
         </div>
     </nav>
 </div>
